Add a 2FA Validity Window (#401)
* Add a validity window for 2FA that allows a user to skip validation after a successful validation

* Allow JSON response to get and validate the tokens

* Add the Validity Window cookie/token to the unified signin endpoint.  Remove signal for emitting token value.
If the tokens dont match, the verification wouldnt work

* Change the cookie config to a dict instead of separate variables

* change httponly to default to true. update openapi.yaml
